--- a/service.yaml
+++ b/service.yaml
@@ -12,4 +12,5 @@ spec:
     - protocol: "TCP"
       port: 8888
       targetPort: 8888
-  type: NodePort
+      nodePort: 32687
+  type: LoadBalancer
