--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -33,7 +33,7 @@ jobs:
        run: mvn clean package -DskipTests
 
      - name: Setup Google Cloud CLI
-       uses: GoogleCloudPlatform/github-actions/setup-gcloud@1.3
+       uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
        env:
          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
        with:
