--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -32,13 +32,20 @@ jobs:
      - name: Build with Maven
        run: mvn clean package -DskipTests
 
-     - name: Setup Google Cloud CLI
-       uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
-       env:
-         ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+#     - name: Setup Google Cloud CLI
+#       uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+#       env:
+#         ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+#       with:
+#         service-account-key: ${{ secrets.GKE_SA_KEY }}
+#         project-id: ${{ secrets.GKE_SA_KEY }}
+
+     - name: Set up Google Cloud SDK
+       uses: google-github-actions/setup-gcloud@main
        with:
-         service-account-key: ${{ secrets.GKE_SA_KEY }}
-         project-id: ${{ secrets.GKE_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
 
      - name: Configure Docker
        run: |-
