--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -43,8 +43,8 @@ jobs:
      - name: Set up Google Cloud SDK
        uses: google-github-actions/setup-gcloud@main
        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GKE_PROJECT }}
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
           export_default_credentials: true
 
      - name: Configure Docker
