--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -45,7 +45,7 @@ jobs:
        with:
           project_id: ${{ secrets.GKE_PROJECT }}
           service_account_key: ${{ secrets.GKE_SA_KEY }}
-          export_default_credentials: true
+#          export_default_credentials: true
 
      - name: Configure Docker
        run: |-
