--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -40,12 +40,17 @@ jobs:
 #         service-account-key: ${{ secrets.GKE_SA_KEY }}
 #         project-id: ${{ secrets.GKE_SA_KEY }}
 
-     - name: Set up Google Cloud SDK
-       uses: google-github-actions/setup-gcloud@v1
-       with:
-          project_id: ${{ secrets.GKE_PROJECT }}
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
+#     - name: Set up Google Cloud SDK
+#       uses: google-github-actions/setup-gcloud@v1
+#       with:
+#          project_id: ${{ secrets.GKE_PROJECT }}
+#          service_account_key: ${{ secrets.GKE_SA_KEY }}
 #          export_default_credentials: true
+     - name: Authenticate with Google Cloud
+       uses: google-github-actions/auth@v2
+       with:
+         project_id: ${{ secrets.GKE_PROJECT }}
+         service_account_key: ${{ secrets.GKE_SA_KEY }}
 
      - name: Configure Docker
        run: |-
