--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -49,7 +49,7 @@ jobs:
      - name: Authenticate with Google Cloud
        uses: google-github-actions/auth@v2
        with:
-         project_id: ${{ secrets.GKE_PROJECT }}
+         credentials_json: ${{ secrets.GKE_PROJECT }}
          service_account_key: ${{ secrets.GKE_SA_KEY }}
 
      - name: Configure Docker
