--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -49,8 +49,8 @@ jobs:
      - name: Authenticate with Google Cloud
        uses: google-github-actions/auth@v2
        with:
-         credentials_json: ${{ secrets.GKE_PROJECT }}
-         service_account_key: ${{ secrets.GKE_SA_KEY }}
+         credentials_json: ${{ secrets.GKE_SA_KEY }}
+         service_account_key: ${{ secrets.GKE_PROJECT }}
 
      - name: Configure Docker
        run: |-
