--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -58,11 +58,11 @@ jobs:
 
      - name: Get GKE Credentials
        run: |-
-        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE" --project "$PROJECT_ID"
+        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
      - name: Build Docker Image
        run: |-
-        docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
+        docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$TAG" .
 
      - name: Publish Docker Image to GCR
        run: |-
