--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -32,13 +32,13 @@ jobs:
      - name: Build with Maven
        run: mvn clean package -DskipTests
 
-#     - name: Setup Google Cloud CLI
-#       uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
-#       env:
-#         ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-#       with:
-#         service-account-key: ${{ secrets.GKE_SA_KEY }}
-#         project-id: ${{ secrets.GKE_SA_KEY }}
+     - name: Setup Google Cloud CLI
+       uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
+       env:
+         ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+       with:
+         service-account-key: ${{ secrets.GKE_PROJECT }}
+         project-id: ${{ secrets.GKE_SA_KEY }}
 
 #     - name: Set up Google Cloud SDK
 #       uses: google-github-actions/setup-gcloud@v1
@@ -46,11 +46,7 @@ jobs:
 #          project_id: ${{ secrets.GKE_PROJECT }}
 #          service_account_key: ${{ secrets.GKE_SA_KEY }}
 #          export_default_credentials: true
-     - name: Authenticate with Google Cloud
-       uses: google-github-actions/auth@v2
-       with:
-         credentials_json: ${{ secrets.GKE_SA_KEY }}
-         service_account_key: ${{ secrets.GKE_PROJECT }}
+
 
      - name: Configure Docker
        run: |-
@@ -73,11 +69,18 @@ jobs:
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
 
-     - name: Auth
-       id: Auth
-       uses: google-github-actions/auth@v0
+     - name: Authenticate with Google Cloud
+       uses: google-github-actions/auth@v2
        with:
          credentials_json: ${{ secrets.GKE_SA_KEY }}
+         service_account_key: ${{ secrets.GKE_PROJECT }}
+#         export_default_credentials: true
+
+#     - name: Auth
+#       id: Auth
+#       uses: google-github-actions/auth@v0
+#       with:
+#         credentials_json: ${{ secrets.GKE_SA_KEY }}
 
      - name: Deploy Image to GKE cluster
        run: |-
