--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -32,20 +32,20 @@ jobs:
      - name: Build with Maven
        run: mvn clean package -DskipTests
 
-     - name: Setup Google Cloud CLI
-       uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
-       env:
-         ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-       with:
-         service-account-key: ${{ secrets.GKE_PROJECT }}
-         project-id: ${{ secrets.GKE_SA_KEY }}
-
-#     - name: Set up Google Cloud SDK
-#       uses: google-github-actions/setup-gcloud@v1
+#     - name: Setup Google Cloud CLI
+#       uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
+#       env:
+#         ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 #       with:
-#          project_id: ${{ secrets.GKE_PROJECT }}
-#          service_account_key: ${{ secrets.GKE_SA_KEY }}
-#          export_default_credentials: true
+#         service-account-key: ${{ secrets.GKE_PROJECT }}
+#         project-id: ${{ secrets.GKE_SA_KEY }}
+
+     - name: Set up Google Cloud SDK
+       uses: google-github-actions/setup-gcloud@v1
+       with:
+          service-account-key: ${{ secrets.GKE_PROJECT }}
+          project-id: ${{ secrets.GKE_SA_KEY }}
+          export_default_credentials: true
 
 
      - name: Configure Docker
