--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -40,11 +40,18 @@ jobs:
 #         service-account-key: ${{ secrets.GKE_PROJECT }}
 #         project-id: ${{ secrets.GKE_SA_KEY }}
 
-     - name: Set up Google Cloud SDK
-       uses: google-github-actions/setup-gcloud@v1
+#     - name: Set up Google Cloud SDK
+#       uses: google-github-actions/setup-gcloud@v1
+#       with:
+#          service-account-key: ${{ secrets.GKE_PROJECT }}
+#          credentials_json: ${{ secrets.GKE_SA_KEY }}
+#          export_default_credentials: true
+
+     - name: Authenticate with Google Cloud
+       uses: google-github-actions/auth@v2
        with:
-          service-account-key: ${{ secrets.GKE_PROJECT }}
           credentials_json: ${{ secrets.GKE_SA_KEY }}
+          service_account_key: ${{ secrets.GKE_PROJECT }}
           export_default_credentials: true
 
 
