--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -83,11 +83,11 @@ jobs:
          service_account_key: ${{ secrets.GKE_PROJECT }}
 #         export_default_credentials: true
 
-#     - name: Auth
-#       id: Auth
-#       uses: google-github-actions/auth@v0
-#       with:
-#         credentials_json: ${{ secrets.GKE_SA_KEY }}
+     - name: Auth
+       id: Auth
+       uses: google-github-actions/auth@v0
+       with:
+         credentials_json: ${{ secrets.GKE_PROJECT }}
 
      - name: Deploy Image to GKE cluster
        run: |-
