--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -76,18 +76,18 @@ jobs:
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
 
-     - name: Authenticate with Google Cloud
-       uses: google-github-actions/auth@v2
-       with:
-         credentials_json: ${{ secrets.GKE_SA_KEY }}
-         service_account_key: ${{ secrets.GKE_PROJECT }}
+#     - name: Authenticate with Google Cloud
+#       uses: google-github-actions/auth@v2
+#       with:
+#         credentials_json: ${{ secrets.GKE_SA_KEY }}
+#         service_account_key: ${{ secrets.GKE_PROJECT }}
 #         export_default_credentials: true
 
-     - name: Auth
-       id: Auth
-       uses: google-github-actions/auth@v0
-       with:
-         credentials_json: ${{ secrets.GKE_PROJECT }}
+#     - name: Auth
+#       id: Auth
+#       uses: google-github-actions/auth@v0
+#       with:
+#         credentials_json: ${{ secrets.GKE_SA_KEY }}
 
      - name: Deploy Image to GKE cluster
        run: |-
