--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -32,15 +32,22 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      - name: Install Google Cloud SDK
-        run: |
-          curl https://sdk.cloud.google.com | bash
-          source /home/runner/google-cloud-sdk/path.bash.inc
+#      - name: Install Google Cloud SDK
+#        run: |
+#          curl https://sdk.cloud.google.com | bash
+#          source /home/runner/google-cloud-sdk/path.bash.inc
+#
+#      - name: Install gke-gcloud-auth-plugin
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          service-account-key: ${{ secrets.GKE_PROJECT }}
+          credentials_json: ${{ secrets.GKE_SA_KEY }}
+          export_default_credentials: true
 
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
