--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -10,12 +10,11 @@ env:
   GKE_CLUSTER: developeriq-cluster
   GKE_ZONE: us-central1-c
   DEPLOYMENT_NAME: auth-service
-  IMAGE: niruddya98/auth-service
+  IMAGE: gcr.io/${{ secrets.GKE_PROJECT }}/niruddya98/auth-service
   TAG: latest
 
 jobs:
-  setup-build-publish-deploy:
-    name: Setup Build Publish Deploy
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,28 +25,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 17
-          server-id: github
-          settings-path: ${{ github.workspace }}
 
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
-
-#      - name: Install Google Cloud SDK
-#        run: |
-#          curl https://sdk.cloud.google.com | bash
-#          source /home/runner/google-cloud-sdk/path.bash.inc
-#
-#      - name: Install gke-gcloud-auth-plugin
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
-        with:
-          service-account-key: ${{ secrets.GKE_PROJECT }}
-          credentials_json: ${{ secrets.GKE_SA_KEY }}
-          export_default_credentials: true
+      - name: Build Docker Image
+        run: docker build -t $IMAGE:$TAG .
 
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
@@ -57,23 +37,18 @@ jobs:
       - name: Configure Docker
         run: gcloud --quiet auth configure-docker
 
-      - name: Get GKE Credentials
-        run: gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+      - name: Push Docker Image to GCR
+        run: docker push $IMAGE:$TAG
 
-      - name: Build Docker Image
-        run: docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$TAG" .
+      - name: Set up kubectl
+        uses: GoogleCloudPlatform/github-actions/setup-gke@main
+        with:
+          cluster-name: $GKE_CLUSTER
+          location: $GKE_ZONE
+          project-id: $PROJECT_ID
+          service-account-key: ${{ secrets.GKE_SA_KEY }}
 
-      - name: Publish Docker Image to GCR
-        run: docker push "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
-
-      - name: Set up Kustomize
+      - name: Update Deployment Image
         run: |
-          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-          chmod u+x ./kustomize
-
-      - name: Deploy Image to GKE cluster
-        run: |
-          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$TAG
-          ./kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment/$DEPLOYMENT_NAME
-          kubectl get services -o wide
+          kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${IMAGE}:${TAG}
+          kubectl rollout status deployment/${DEPLOYMENT_NAME}
